--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,10 @@
   },
   "devDependencies": {
     "vite": "^5.4.19",
-    "@vitejs/plugin-react": "^4.3.2"
+    "@vitejs/plugin-react": "^4.3.2",
+    "tailwindcss": "^3.4.17",
+    "postcss": "^8.4.47",
+    "autoprefixer": "^10.4.20"
   },
   "dependencies": {
     "react": "^18.3.1",
