--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,23 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+
+    "@capacitor/core": "^7.4.2",
+    "@capacitor/app": "^7.0.1",
+    "@capacitor/haptics": "^7.0.1",
+    "@capacitor/keyboard": "^7.0.1",
+    "@capacitor/preferences": "^7.0.2",
+    "@capacitor/splash-screen": "^7.0.1",
+    "@capacitor/status-bar": "^7.0.1"
+  },
   "devDependencies": {
     "vite": "^5.4.19",
     "@vitejs/plugin-react": "^4.3.2",
     "tailwindcss": "^3.4.17",
     "postcss": "^8.4.47",
     "autoprefixer": "^10.4.20"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
   }
 }
