--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "wouter": "^3.3.5",
 
     "@capacitor/core": "^7.4.2",
     "@capacitor/app": "^7.0.1",
@@ -23,6 +24,7 @@
     "@vitejs/plugin-react": "^4.3.2",
     "tailwindcss": "^3.4.17",
     "postcss": "^8.4.47",
-    "autoprefixer": "^10.4.20"
+    "autoprefixer": "^10.4.20",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
