--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^18.3.1",
     "wouter": "^3.3.5",
 
+    "@tanstack/react-query": "^5.60.5",
+
     "@capacitor/core": "^7.4.2",
     "@capacitor/app": "^7.0.1",
     "@capacitor/haptics": "^7.0.1",
