--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sonner": "^1.5.0"
     "wouter": "^3.3.5",
 
     "@tanstack/react-query": "^5.60.5",
