--- a/client/package.json
+++ b/client/package.json
@@ -9,18 +9,16 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sonner": "^1.5.0"
     "wouter": "^3.3.5",
-
     "@tanstack/react-query": "^5.60.5",
-
     "@capacitor/core": "^7.4.2",
     "@capacitor/app": "^7.0.1",
     "@capacitor/haptics": "^7.0.1",
     "@capacitor/keyboard": "^7.0.1",
     "@capacitor/preferences": "^7.0.2",
     "@capacitor/splash-screen": "^7.0.1",
-    "@capacitor/status-bar": "^7.0.1"
+    "@capacitor/status-bar": "^7.0.1",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "vite": "^5.4.19",
