--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "@capacitor/preferences": "^7.0.2",
     "@capacitor/splash-screen": "^7.0.1",
     "@capacitor/status-bar": "^7.0.1",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "lucide-react": "^0.453.0"
   },
   "devDependencies": {
     "vite": "^5.4.19",
