--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,8 +1,15 @@
 {
   "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",
+    "jsx": "react-jsx",
+    "moduleResolution": "Bundler",
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
-  }
+    },
+    "strict": true,
+    "skipLibCheck": true
+  },
+  "include": ["src", "vite-env.d.ts"]
 }
